[gd_scene load_steps=20 format=3 uid="uid://b7gro128ccpt7"]

[ext_resource type="Script" path="res://scripts/magic_ball.gd" id="1_jdvqj"]
[ext_resource type="Texture2D" uid="uid://bsohe0p13lo3" path="res://graphics/projectiles/wispySpellSpriteSheet2.png" id="2_nan6q"]
[ext_resource type="Texture2D" uid="uid://bfh86upqyayxm" path="res://graphics/projectiles/sprite_sheet_explosion_fx.png" id="3_1ocjn"]
[ext_resource type="Script" path="res://components/HitboxComponent.gd" id="4_h7i28"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1r4os"]
atlas = ExtResource("2_nan6q")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag44w"]
atlas = ExtResource("2_nan6q")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3n0r"]
atlas = ExtResource("2_nan6q")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mae5p"]
atlas = ExtResource("2_nan6q")
region = Rect2(48, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f7dki"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r4os")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag44w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3n0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mae5p")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_waypy"]
radius = 2.74874

[sub_resource type="AtlasTexture" id="AtlasTexture_fwild"]
atlas = ExtResource("3_1ocjn")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0bxn"]
atlas = ExtResource("3_1ocjn")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu2n3"]
atlas = ExtResource("3_1ocjn")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1i72n"]
atlas = ExtResource("3_1ocjn")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_po23p"]
atlas = ExtResource("3_1ocjn")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_72ei3"]
atlas = ExtResource("3_1ocjn")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0wjr"]
atlas = ExtResource("3_1ocjn")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfn8x"]
atlas = ExtResource("3_1ocjn")
region = Rect2(112, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qu1i4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwild")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0bxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu2n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1i72n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po23p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72ei3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0wjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfn8x")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[node name="Magic Ball" type="Area2D"]
z_index = 2
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 4
script = ExtResource("1_jdvqj")

[node name="Ball Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0.666667, -1.06581e-14)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_f7dki")
autoplay = "default"
frame_progress = 0.183617

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4.66667, 0)
shape = SubResource("CircleShape2D_waypy")

[node name="ExplosionAnimation" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_qu1i4")

[node name="HitBoxComponent" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 6
script = ExtResource("4_h7i28")

[node name="Hitbox" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(4.66667, 0)
shape = SubResource("CircleShape2D_waypy")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="HitBoxComponent" to="." method="_on_hit_box_component_area_entered"]
